@startuml ManageSubjectClassDiagram
!theme plain
skinparam classBackgroundColor #f0f0f0
skinparam classBorderColor #333
skinparam arrowColor #333

left to right direction

' ════════════════════════════════════════════════════════════════════════════════════
' CONTROLLER LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class SubjectController {

}

' ════════════════════════════════════════════════════════════════════════════════════
' GUARD LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class AuthGuard {

}

class RoleGuard {

}

' ════════════════════════════════════════════════════════════════════════════════════
' DTO LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class CreateSubjectDto {

}

class UpdateSubjectDto {

}

' ════════════════════════════════════════════════════════════════════════════════════
' SERVICE LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class SubjectService {

}

class BunnyService {

}

' ════════════════════════════════════════════════════════════════════════════════════
' ENTITY LAYER
' ════════════════════════════════════════════════════════════════════════════════════

class Subject {

}

class User {

}

class Lesson {

}

' ════════════════════════════════════════════════════════════════════════════════════
' RELATIONSHIPS
' ════════════════════════════════════════════════════════════════════════════════════


' Controller relationships
SubjectController --> AuthGuard
SubjectController --> RoleGuard
SubjectController --> SubjectService
SubjectController --> CreateSubjectDto
SubjectController --> UpdateSubjectDto

' Service relationships
SubjectService --> BunnyService
SubjectService --> Subject
SubjectService --> Lesson

' Entity relationships
Subject --> User
Subject --> Lesson

@enduml
